--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@ body{
   border: 1px solid lightgray;
 }
 
+.task-box{
+  width: 500px;
+  height: 50px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 3px solid blue;
+  margin: 10px;
+}
+
+input:focus {
+
+  outline: none;
+
+}
+
 .task-tabs{
   display: flex;
   border-bottom: 1px solid lightgray;
@@ -76,4 +92,65 @@ body{
   text-decoration: line-through;
   background-color: lightgray;
   transition: 0.5s;
+}
+
+
+
+.btn-all {
+  background-color: white; 
+  color: black; 
+  border: none;
+  font-family :Impact, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+}
+
+.btn-all:hover {
+  background-color: green;
+  color: white;
+  border: none;
+  padding: 5px;
+}
+
+.btn-ing {
+  background-color: white; 
+  color: black; 
+  border: none;
+  font-family :Impact, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+}
+
+.btn-ing:hover {
+  background-color: greenyellow;
+  color: black;
+  border: none;
+  padding: 5px;
+}
+
+.btn-end {
+  background-color: white; 
+  color: black; 
+  border: none;
+  font-family :Impact, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+}
+
+.btn-end:hover {
+  background-color: purple;
+  color: white;
+  border: none;
+  padding: 5px;
+}
+
+@media (max-width:600px) {
+  .task-box{
+    width: 400px;
+    height: 25px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 3px solid green;
+    margin: 5px;
+  }
+  
+
 }
