--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 body{
   margin: 0;
   background-image: url("images/background.avif");
@@ -98,7 +100,7 @@ input:focus {
 
 
 
-.btn-all {
+#all {
   background-color: white; 
   color: black; 
   border: none;
@@ -106,14 +108,14 @@ input:focus {
   font-size: 20px;
 }
 
-.btn-all:hover {
+#all:hover {
   background-color: green;
   color: white;
   border: none;
   padding: 5px;
 }
 
-.btn-ing {
+#ongoing {
   background-color: white; 
   color: black; 
   border: none;
@@ -121,14 +123,14 @@ input:focus {
   font-size: 20px;
 }
 
-.btn-ing:hover {
+#ongoing:hover {
   background-color: greenyellow;
   color: black;
   border: none;
   padding: 5px;
 }
 
-.btn-end {
+#done {
   background-color: white; 
   color: black; 
   border: none;
@@ -136,7 +138,7 @@ input:focus {
   font-size: 20px;
 }
 
-.btn-end:hover {
+#done:hover {
   background-color: purple;
   color: white;
   border: none;
